--- a/index.html
+++ b/index.html
@@ -7,14 +7,62 @@
     <title>Document</title>
 </head>
 <body>
-    <from>
+    <form>
         <fieldset>
             <legend>My Info.</legend>
             <label>Name.</label>
-            <input type="text">
+            <input type="text" placeholder="">
             <textarea></textarea>
-            <label>Email</label>
+            <label>Email <input type="email"></label>
+            <label>Password <input type="password" required></label>
+            <label>Phone Number <input type="number"><input type="submit"></label>
+            <fieldset><legend>Things I Like.
+                <input type="checkbox" name="name">
+                <label>Hello</label>
+                <input type="radio" name="" checked>
+                <input type="radio" name="">
+                <input type="radio" name="">
+                <input type="date">
+                <input type="time">
+            </fieldset>
         </fieldset>
-    </from>
+    </form>
+
+
+
+
+    <form>
+        <fieldset>
+        <legend>Favorite Video Games</legend>
+        <label>Name.</label>
+        <input type="text" placeholder="First Name">
+        <label>Email.</label>
+        <input type="text" placeholder="Put your Email here.">
+        <textarea>Tell us About your Hobbies.</textarea>
+        <fieldset>
+        <label>Check all the label for the type of Video Games you like:</label>
+        <input type="checkbox" name="Action"  id="Action"checked>
+        <label for="action">Action</label><br>
+        <input type="checkbox" name="Adventure" id="Adventure">
+        <label for="adventure">Action</label><br>
+        <input type="checkbox" name="Racing" id="racing">
+        <label for="Racing">Racing</label><br>
+        <input type="checkbox" name="Casual" id="Casual">
+        <label for="Casual">Casual</label><br>
+        <label>Check all the label for the type of Video Games you like:</label><br>
+        <input type="radio" name="Action"  id="Action"checked>
+        <label for="action">Action</label><br>
+        <input type="radio" name="Adventure" id="Adventure">
+        <label for="adventure">Adventure</label><br>
+        <input type="radio" name="Racing" id="racing">
+        <label for="Racing">Racing</label><br>
+        <input type="radio" name="Casual" id="Casual">
+        <label for="Casual">Casual</label><br>
+        <input type="submit">
+        <input type="date">
+        <input type="time">
+         </fieldset>
+    </fieldset>
+    </form>
 </body>
 </html>
